--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 }
 
 .body {
-    
-font-family: 'Roboto', sans-serif;
-background-image: url("images/patt.png");
+
+    font-family: 'Roboto', sans-serif;
+    background-image: url("images/patt.png");
 }
+
 
 .container {
     width: 1200px;
@@ -19,15 +20,19 @@ background-image: url("images/patt.png");
     margin-left: -15px;
     margin-right: -15px;
 }
-.row::after, .menu::after {
+
+.row::after,
+.menu::after,
+.search-box::after {
     content: "";
     display: block;
     clear: both;
 }
 
 .header {
-background-color: rgba(255, 255, 255, 0.75);
-padding: 25px 0;
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 25px 0;
+    
 }
 
 [class*="col-"] {
@@ -35,6 +40,7 @@ padding: 25px 0;
     padding-left: 15px;
     padding-right: 15px;
 }
+
 .col-1 {
     width: 8.33333%;
 }
@@ -43,25 +49,36 @@ padding: 25px 0;
 
     width: 16.66667%;
 }
+
 .col-3 {
 
-width: 25%;
+    width: 25%;
 }
 
 .col-6 {
     width: 50%;
 }
+
 .col-12 {
     width: 100%;
+}
+
+.logo {
+    margin-top: 9px;
+}
+.menu {
+   
 }
 
 .menu li {
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
+    position: relative;
 
 
 }
+
 .menu li:last-child {
     border-right: 1px solid #2c71b8;
 }
@@ -77,6 +94,96 @@ width: 25%;
 }
 
 .menu a:hover {
+    background-color: #2c71b8;
+    color: white;
+}
+
+.search-box {
+
+    display: block;
+    border: 1px solid;
+    width: 200px;
+    height: 40px;
+
+    margin-top: 5px;
+    color: #2c71b8;
+
+}
+
+.text {
+
+    width: 160px;
+    border: 0px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.0);
+
+    font-size: 21px;
+    float: left;
+
+}
+
+::placeholder {
+    color: #2c71b8;
+   
+
+}
+
+input {
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    color: #2c71b8;
+}
+
+input {
+    font-family: 'Roboto', sans-serif;
+}
+
+.lupa {
+
+    margin-top: 4px;
+    margin-right: 5px;
+    border: 1px solid;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    background-color: #2c71b8;
+    text-align: center;
+    float: right;
+}
+
+button {
+    float: right;
+    width: 40px;
+    height: 40px;
+    margin-top: -40px;
+    line-height: 40px;
+    text-align: center;
+
+}
+
+
+.submenu a:hover {
+background-color: white;
+color: #2c71b8;
+   
+
+}
+.submenu {
+    display: none;
+    position: absolute;
+    list-style-type: none;
     background-color:#2c71b8 ;
     color: white;
+    height: 366px;
+      
+}
+.submenu li {
+    
+    width: 285px;
+}
+    
+li:hover > .submenu {
+    display: block;
+    
 }
