--- a/style.css
+++ b/style.css
@@ -70,21 +70,39 @@
     margin-top: 9px;
 }
 
-.menu {}
 
-.menu li {
+
+.menu > li {
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
     position: relative;
 
 }
+.arrowdown {
+ position: absolute;
+    background-image: url(/lesson-9/shop-project/images/172458_down_arrow_icon.svg);
+   width: 15px;
+   height: 15px;  
+   border: none;
+   color: #2c71b8;
+  margin: auto;
+  top: 0;
+  right: 10px;
+  bottom: 0;
+  
+}
 
-.menu li:last-child {
+.arrowdown:hover {
+  
+    color: white;
+}
+
+.menu > li > :last-child {
     border-right: 1px solid #2c71b8;
 }
 
-.menu a {
+.menu > li > a {
     display: block;
     height: 50px;
     text-align: center;
@@ -94,7 +112,7 @@
     font-size: 21px;
 }
 
-.menu a:hover {
+.menu > li > a:hover {
     background-color: #2c71b8;
     color: white;
 }
@@ -102,7 +120,7 @@
 .search {
     border: 1px solid #2c71b8;
     padding: 5px;
-    height: 39px;
+    height: 40px;
     margin-top: 5px;
 }
 
@@ -110,6 +128,8 @@
     color: #2c71b8;
     font-size: 21px;
     padding-left: 15px;
+    
+    
 }
 .searchfield {
     font-family: 'Roboto', sans-serif;
@@ -119,6 +139,10 @@
     width: 153px;
     float: left;
     height: 30px;
+    color: #2c71b8;
+    font-size: 21px;
+    line-height: 30px;
+    
     
 }
 
@@ -130,6 +154,7 @@
     background-color: #2c71b8;
     background-repeat: no-repeat;
     border: none;
+    margin-top: -1px;
     
    
 }
@@ -167,27 +192,59 @@
     top: -5px;
 
 }
-.submenu a:hover {
-    background-color: white;
-    color: #2c71b8;
-}
+
 
 .submenu {
-    display: none;
+    /* display: none; */
     position: absolute;
     list-style-type: none;
     background-color: #2c71b8;
-    color: white;
-    height: 366px;
+    
+    height: 315px;
+    left: -1px;
+   
+    padding-top: 30px;
+   
+    
+    
 
 }
 
-.submenu li {
+.submenu > li {
+
 
     width: 285px;
+    height: 40px;
+    font-size: 21px;
+    color: white;
+  
 }
+.submenu > li > a:hover 
+ {
+    background-color: white;
+    color: #2c71b8;
+    
+    
+   
+}
+
 
 li:hover>.submenu {
     display: block;
+    
+   
+    
 
+}
+.submenu > li > a {
+    display: block;
+    text-decoration: none;
+    padding-left: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+      
+}
+.submenu > li > a > :first-child {
+    
 }
