--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }
 
 .row {
+    
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -29,6 +30,7 @@
 }
 
 .header {
+    min-width: 1200px;
     background-color: rgba(255, 255, 255, 0.75);
     padding: 25px 0;
 
