--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
 }
 
 .header {
+    min-width: 1200px;
     background-color: rgba(255, 255, 255, 0.75);
     padding: 25px 0;
 
@@ -80,6 +81,11 @@
 
 }
 
+.menu>li:hover .arrowdown {
+       color: white;
+       background-image: url(images/arrowwhite.png);
+      
+    }
 .arrowdown {
     position: absolute;
     z-index: 10;
@@ -96,13 +102,9 @@
     
 }
 
-menu>li>a:hover.arrowdown {
 
-   background-image: url(images/arrowwhite.png);
-  
-}
 
-.menu>li>:last-child { 
+.menu>li:last-child { 
     style.css:105;
     border-right: 1px solid #2c71b8;
 }
