--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
     background-image: url("images/patt.png");
 }
 
- /* header */
-.container  {
+/* header */
+.container {
     width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
@@ -63,6 +63,7 @@
     width: 75%;
 }
 
+
 .col-12 {
     width: 100%;
 }
@@ -82,10 +83,11 @@
 }
 
 .menu>li:hover .arrowdown {
-       color: white;
-       background-image: url(images/arrowwhite.png);
-      
-    }
+    color: white;
+    background-image: url(images/arrowwhite.png);
+
+}
+
 .arrowdown {
     position: absolute;
     z-index: 10;
@@ -98,14 +100,14 @@
     top: 0;
     right: 10px;
     bottom: 0;
-    
-    
+
+
 }
 
 
 
-.menu>li:last-child { 
-    style.css:105;
+.menu>li:last-child {
+    style.css: 105;
     border-right: 1px solid #2c71b8;
 }
 
@@ -117,13 +119,13 @@
     text-decoration: none;
     color: #2c71b8;
     font-size: 21px;
-    
+
 }
 
 .menu>li>a:hover {
     background-color: #2c71b8;
     color: white;
-    
+
 }
 
 .search {
@@ -137,7 +139,7 @@
     color: #2c71b8;
     font-size: 21px;
     padding-left: 15px;
-    
+
 }
 
 .searchfield {
@@ -211,9 +213,9 @@
     height: 315px;
     left: -1px;
     padding-top: 30px;
-    
-   
-    
+
+
+
 }
 
 .submenu>li {
@@ -223,6 +225,7 @@
     color: white;
 
 }
+
 .submenu>li>a:hover {
     background-color: white;
     color: #2c71b8;
@@ -232,7 +235,7 @@ li:hover>.submenu {
     display: block;
 }
 
-li:hover > a {
+li:hover>a {
     background-color: #2c71b8;
     color: white;
 }
@@ -252,19 +255,29 @@ li:hover > a {
 .container-2 {
     width: 1200px;
     margin: 0 auto;
-    
+
+    border: 1px solid #ffff;
+
 }
 
-
+.main ::after {
+    content: "";
+    display: block;
+    clear: both;
+}
 
 .breadcrumb>li {
     float: left;
-  
+    margin-top: 30px;
+    margin-bottom: 25px;
+
 }
+
 .breadcrumb>li>a {
     text-decoration: none;
     font-size: 14px;
     color: #acc1dd;
+    padding-right: 10px;
 }
 
 .breadcrumb::after {
@@ -274,17 +287,80 @@ li:hover > a {
 }
 
 h2 {
-font-size: 48px;
-color: white;
-font-weight: bolder;
+    font-size: 48px;
+    color: white;
+    font-weight: bolder;
+    margin-bottom: 50px;
 
 
 }
 
 .product-card {
-    width: 33.33333%;
+    width: 270px;
+    height: 650px;
     float: left;
-   padding-right: 15px;
-   height: 650px;
+
+    margin: 15px;
+    border: solid 1px #ffff;
+
 }
 
+.product-box {
+
+    width: 900px;
+    margin-left: -15px;
+
+}
+
+
+
+.boximage {
+    width: 270px;
+    height: 180px;
+    background-color: rgba(255, 255, 255, 0.75);
+    position: relative;
+
+}
+
+.image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.fullscreen {
+    position: absolute;
+    background-image: url(images/fullblue.png);
+    background-color: #2c72b800;
+    width: 30px;
+    height: 30px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border: 1px solid #2c71b8;
+   right: 0;
+   top: 0;
+   margin: 10px;
+
+   
+}
+
+.heart {
+position: absolute;
+width: 30px;
+    height: 30px;
+    right: 0;
+    top: 0;
+    background-image: url(images/heart.png);
+    background-color: #2c72b800;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border: 1px solid #2c71b8;
+    margin-top: 50px;
+    margin-right: 10px;
+}
+
+.blue {
+   background-image: url(images/whiteheart.png);
+   background-color: #2c71b8;
