--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@
     height: 315px;
     left: -1px;
     padding-top: 30px;
+    z-index: 10;
 
 
 
@@ -255,8 +256,7 @@ li:hover>a {
 .container-2 {
     width: 1200px;
     margin: 0 auto;
-
-    border: 1px solid #ffff;
+    
 
 }
 
@@ -269,7 +269,7 @@ li:hover>a {
 .breadcrumb>li {
     float: left;
     margin-top: 30px;
-    margin-bottom: 25px;
+    margin-bottom: 21px;
 
 }
 
@@ -285,12 +285,15 @@ li:hover>a {
     clear: both;
     content: "";
 }
+.lastli {
+    text-decoration-line: underline;
+}
 
 h2 {
     font-size: 48px;
     color: white;
     font-weight: bolder;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 
 
 }
@@ -302,6 +305,8 @@ h2 {
 
     margin: 15px;
     border: solid 1px #ffff;
+    background-color: rgba(44, 113, 184, 0.75);
+    
 
 }
 
@@ -339,16 +344,16 @@ h2 {
     background-position: center center;
     background-repeat: no-repeat;
     border: 1px solid #2c71b8;
-   right: 0;
-   top: 0;
-   margin: 10px;
+    right: 0;
+    top: 0;
+    margin: 10px;
 
-   
+
 }
 
 .heart {
-position: absolute;
-width: 30px;
+    position: absolute;
+    width: 30px;
     height: 30px;
     right: 0;
     top: 0;
@@ -362,5 +367,87 @@ width: 30px;
 }
 
 .blue {
-   background-image: url(images/whiteheart.png);
-   background-color: #2c71b8;
+    background-image: url(images/whiteheart.png);
+    background-color: #2c71b8;
+}
+
+.fblue {
+    background-image: url(images/full.png);
+    background-color: #2c71b8;
+
+}
+
+.name {
+    font-size: 30px;
+    color: white;
+    font-weight: bold;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-bottom: 18px;
+}
+
+.product-card>p {
+    color: white;
+    font-size: 21px;
+    margin-left: 15px;
+    margin-bottom: 18px;
+}
+
+.info {
+color: white;
+font-size: 21px;
+}
+
+
+.product-card p span {
+  font-weight: 900;
+  display: inline-block;
+  margin-right: 7px;
+  margin-left: 15px;
+  margin-bottom: 18px;
+  
+}
+
+.price {
+    color: white;
+   text-align: center;
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+
+sup {
+    font-size: 24px;
+}
+
+.more {
+    width: 210px;
+    height: 50px;
+    line-height: 50px;
+    background-color: #2c71b8;
+    color: white;
+    border: solid 1px white;
+    text-align: center;
+    margin-left: 30px;
+  margin-bottom: 15px;
+  font-size: 21px;
+  font-weight: 550;
+   
+}
+
+.add {
+    width: 210px;
+    height: 50px;
+    line-height: 50px;
+    color: white;
+    font-size: 21px;
+    font-weight: 550;
+    
+    border: solid 1px white;
+    text-align: center;
+    margin-left: 30px;
+    background-image: url(images/korzwhite.png);
+    background-color: #568dc6;
+    background-position: 182px center ;
+    background-repeat: no-repeat;
+}
