--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .row {
-    
+
     margin-left: -15px;
     margin-right: -15px;
 }
@@ -82,10 +82,11 @@
     position: relative;
 
 }
+
 .menu>li:hover .arrowdown {
-       color: white;
-       background-image: url(images/arrowwhite.png);    
-    }
+    color: white;
+    background-image: url(images/arrowwhite.png);
+}
 
 .menu>li:hover .arrowdown {
     color: white;
@@ -261,7 +262,7 @@ li:hover>a {
 .container-2 {
     width: 1200px;
     margin: 0 auto;
-    
+
 
 }
 
@@ -290,6 +291,7 @@ li:hover>a {
     clear: both;
     content: "";
 }
+
 .lastli {
     text-decoration-line: underline;
 }
@@ -311,7 +313,8 @@ h2 {
     margin: 15px;
     border: solid 1px #ffff;
     background-color: rgba(44, 113, 184, 0.75);
-    
+
+
 
 }
 
@@ -356,6 +359,12 @@ h2 {
 
 }
 
+.fullscreen:hover {
+    background-image: url(images/full.png);
+    background-color: #2c71b8;
+
+}
+
 .heart {
     position: absolute;
     width: 30px;
@@ -371,16 +380,14 @@ h2 {
     margin-right: 10px;
 }
 
-.blue {
+.heart:hover {
     background-image: url(images/whiteheart.png);
     background-color: #2c71b8;
 }
 
-.fblue {
-    background-image: url(images/full.png);
-    background-color: #2c71b8;
 
-}
+
+
 
 .name {
     font-size: 30px;
@@ -399,23 +406,23 @@ h2 {
 }
 
 .info {
-color: white;
-font-size: 21px;
+    color: white;
+    font-size: 21px;
 }
 
 
 .product-card p span {
-  font-weight: 900;
-  display: inline-block;
-  margin-right: 7px;
-  margin-left: 15px;
-  margin-bottom: 18px;
-  
+    font-weight: 900;
+    display: inline-block;
+    margin-right: 7px;
+    margin-left: 15px;
+    margin-bottom: 18px;
+
 }
 
 .price {
     color: white;
-   text-align: center;
+    text-align: center;
     font-size: 48px;
     font-weight: bold;
     margin-bottom: 25px;
@@ -434,10 +441,10 @@ sup {
     border: solid 1px white;
     text-align: center;
     margin-left: 30px;
-  margin-bottom: 15px;
-  font-size: 21px;
-  font-weight: 550;
-   
+    margin-bottom: 15px;
+    font-size: 21px;
+    font-weight: 550;
+
 }
 
 .add {
@@ -447,12 +454,12 @@ sup {
     color: white;
     font-size: 21px;
     font-weight: 550;
-    
+
     border: solid 1px white;
     text-align: center;
     margin-left: 30px;
     background-image: url(images/korzwhite.png);
     background-color: #568dc6;
-    background-position: 182px center ;
+    background-position: 182px center;
     background-repeat: no-repeat;
 }
