--- a/style.css
+++ b/style.css
@@ -447,6 +447,12 @@ sup {
 
 }
 
+.more:hover {
+    background-color: white;
+   
+    color: #2c71b8;
+}
+
 .add {
     width: 210px;
     height: 50px;
@@ -462,4 +468,10 @@ sup {
     background-color: #568dc6;
     background-position: 182px center;
     background-repeat: no-repeat;
+}
+.add:hover {
+background-color: white;
+color: #2c71b8;
+background-image: url(images/korzbl.png);
+
 }
