--- a/style.css
+++ b/style.css
@@ -118,9 +118,10 @@
     font-size: 21px;
 }
 
-.menu>li>a:hover {
+.menu>li>a:hover,{
     background-color: #2c71b8;
     color: white;
+
 }
 
 .search {
@@ -427,9 +428,10 @@ h2 {
     margin-right: 10px;
 }
 
-.heart:hover {
+.heart:hover,  .liked  {
     background-image: url(images/whiteheart.png);
     background-color: #2c71b8;
+    cursor: pointer;
 }
 
 .name {
@@ -511,4 +513,57 @@ sup {
     text-align: center;
     font-size: 36px;
     margin-top: 40px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
+    
+} 
+
+.modal-block {
+    width: 350px;
+    margin: 80px auto;
+    height: 200px;
+    background-color: #fff;
+    border:1px solid grey;
+    padding: 15px;
+    font-size: 20px;
+
+}
+
+
+
+.form-field {
+    margin: 10px 0;
+}
+
+.form-field  input {
+    width: 100%;
+    height: 30px;
+    padding: 5px;
+    
+}
+
+.form-field ::placeholder {
+    font-size: 15px;
+    padding-left: 5px;
+    color: black;
+}
+
+.btn-close {
+    text-align: right;
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
 }
