--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@
     font-size: 21px;
 }
 
-.menu>li>a:hover,{
+.menu>li>a:hover,
+    {
     background-color: #2c71b8;
     color: white;
 
@@ -232,6 +233,83 @@ li:hover>a {
     padding-bottom: 10px;
     color: white;
 }
+
+
+
+/* slider */
+
+
+.slider>div {
+
+    font-size: 100px;
+    color: white;
+    text-align: center;
+    padding: 150px 0;
+
+}
+
+
+.slider-block {
+    border-bottom: 1px solid white;
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 400px;
+
+}
+
+.slick-dots li {
+    border: 1px solid white;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+
+}
+
+.slick-dots li button:before {
+    content: none;
+}
+
+.slick-dots .slick-active {
+    background-color: white;
+}
+
+.slick-dotted.slick-slider {
+    margin-bottom: 0px;
+}
+
+.slick-dots {
+    bottom: 20px;
+    
+}
+
+
+.slick-prev:before {
+    background-image: url(images/left.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity: 100%;
+    color: transparent;
+    font-size: 70px;
+    line-height: 50px;
+}
+
+.slick-next:before {
+    background-image: url(images/right.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity: 100%;
+    color: transparent;
+    font-size: 70px;
+    line-height: 50px;
+}
+
+.slick-prev,
+.slick-next {
+    width: 80px;
+    height: 50px;
+}
+
 /* filter */
 
 .filter {
@@ -240,10 +318,11 @@ li:hover>a {
     color: white;
     font-size: 21px;
     background-color: #acc1dd4d;
-    
-    
-    
+
+
+
 }
+
 .filter p {
     font-weight: bold;
     margin-bottom: 10px;
@@ -251,37 +330,40 @@ li:hover>a {
 
 
 
-.input + label {
+.input+label {
     display: inline-flex;
-  align-items: center;
-  user-select: none;
-  margin-bottom: 5px;
+    align-items: center;
+    user-select: none;
+    margin-bottom: 5px;
 
 }
+
 .input+label::before {
     margin-right: 10px;
-    margin-top: 10px ;
+    margin-top: 10px;
     margin-bottom: 12px;
     margin-right: 10px;
     margin-left: 0px;
-   
+
 }
 
 label {
     cursor: pointer;
 }
+
 label::before {
     content: "";
-  
+
     width: 10px;
     height: 10px;
-    border:1px solid white;
+    border: 1px solid white;
     cursor: pointer;
-    
+
 }
-.input[type="checkbox"]:checked + label::before {
+
+.input[type="checkbox"]:checked+label::before {
     background-color: white;
-    
+
 }
 
 
@@ -294,14 +376,17 @@ label::before {
     padding-top: 32px;
     padding-left: 30px;
 }
+
 .color {
     height: 220px;
     padding-left: 30px;
-    
+
 }
+
 .color p {
     margin-top: 40px;
 }
+
 .ram {
     height: 225px;
     padding-left: 30px;
@@ -310,6 +395,7 @@ label::before {
 .ram p {
     margin-top: 50px;
 }
+
 .more-options {
     height: 20px;
     text-align: center;
@@ -321,7 +407,7 @@ label::before {
     width: 210px;
     height: 50px;
     display: block;
-    margin:0 auto;
+    margin: 0 auto;
     background-color: #2c71b8;
     color: white;
     font-size: 21px;
@@ -333,6 +419,7 @@ label::before {
     background-color: white;
     color: #2c71b8;
 }
+
 /* main */
 
 
@@ -428,7 +515,8 @@ h2 {
     margin-right: 10px;
 }
 
-.heart:hover,  .liked  {
+.heart:hover,
+.liked {
     background-image: url(images/whiteheart.png);
     background-color: #2c71b8;
     cursor: pointer;
@@ -521,16 +609,16 @@ sup {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.3);
-    
-} 
+    background-color: rgba(0, 0, 0, 0.6);
+
+}
 
 .modal-block {
-    width: 350px;
-    margin: 80px auto;
-    height: 200px;
+    width: 400px;
+    margin: 200px auto;
+    height: 220px;
     background-color: #fff;
-    border:1px solid grey;
+    border: 1px solid grey;
     padding: 15px;
     font-size: 20px;
 
@@ -539,14 +627,15 @@ sup {
 
 
 .form-field {
-    margin: 10px 0;
+    margin: 20px 0;
+
 }
 
-.form-field  input {
+.form-field input {
     width: 100%;
     height: 30px;
     padding: 5px;
-    
+
 }
 
 .form-field ::placeholder {
@@ -557,6 +646,18 @@ sup {
 
 .btn-close {
     text-align: right;
+    cursor: pointer;
+    width: 10px;
+    display: block;
+    margin-left: 97%;
+}
+
+.modal-btn {
+    height: 25px;
+    line-height: 20px;
+    width: 200px;
+    margin: 0 auto;
+    display: block;
     cursor: pointer;
 }
 
